[CI] Add central-publishing-maven-plugin to central profile

--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -204,6 +204,28 @@
     </profile>
     <profile>
       <id>central</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.central</groupId>
+            <artifactId>central-publishing-maven-plugin</artifactId>
+            <version>0.8.0</version>
+            <executions>
+              <execution>
+                <id>deploy-central</id>
+                <phase>deploy</phase>
+                <goals>
+                  <goal>publish</goal>
+                </goals>
+              </execution>
+            </executions>
+            <extensions>true</extensions>
+            <configuration>
+              <publishingServerId>central</publishingServerId>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
       <distributionManagement>
         <repository>
           <id>central</id>
