--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -35,6 +35,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.outputTimestamp>1980-02-01T00:00:00Z</project.build.outputTimestamp>
     <dist.mvn.central.snapshotrepo.url>https://central.sonatype.com/repository/maven-snapshots/</dist.mvn.central.snapshotrepo.url>
     <scm.root>scm:git:git@github.com:gosu-lang</scm.root>
   </properties>
