--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -105,7 +105,7 @@
             </additionalOptions>
           </configuration>
         </plugin>
-        <plugin>
+       <!-- <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
@@ -118,7 +118,7 @@
           <configuration>
             <deployAtEnd>true</deployAtEnd>
           </configuration>
-        </plugin>
+        </plugin>-->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
