--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -105,10 +105,10 @@
             </additionalOptions>
           </configuration>
         </plugin>
-       <!-- <plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+          <version>3.1.2</version>
           <executions>
             <execution>
               <id>default-deploy</id>
@@ -118,7 +118,7 @@
           <configuration>
             <deployAtEnd>true</deployAtEnd>
           </configuration>
-        </plugin>-->
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
