--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.gosu-lang.gosu</groupId>
   <artifactId>gosu-parent</artifactId>
-  <version>1.18.8-SNAPSHOT</version>
+  <version>1.18.5-incremental-alpha-1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Gosu :: Parent POM</name>
@@ -30,7 +30,7 @@
     <connection>${scm.root}/gosu-lang.git</connection>
     <developerConnection>${scm.root}/gosu-lang.git</developerConnection>
     <url>https://github.com/gosu-lang/gosu-lang</url>
-    <tag>rel/1.18.6</tag>
+    <tag>rel/1.18.5</tag>
   </scm>
 
   <properties>
@@ -114,7 +114,6 @@
             <execution>
               <id>default-deploy</id>
               <phase>none</phase>
-              <!--<phase>none</phase> disabling this required for snapshot publish-->
             </execution>
           </executions>
           <configuration>
