--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -113,6 +113,7 @@
             <execution>
               <id>default-deploy</id>
               <phase>none</phase>
+              <!--<phase>none</phase> disabling this required for snapshot publish-->
             </execution>
           </executions>
           <configuration>
