--- a/.github/workflows/release-gosu.yml
+++ b/.github/workflows/release-gosu.yml
@@ -57,11 +57,13 @@ jobs:
 
       - name: Validate version format
         run: |
-          if [[ ! "${{ inputs.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9]+)?$ ]]; then
-            echo "Error: Version must follow semantic versioning (e.g., 1.2.3 or 1.2.3-RC1)"
+          VERSION="${{ inputs.version }}"
+          REGEX='^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9
+          if [[ ! "$VERSION" =~ $REGEX ]]; then
+            echo "Error: Version '$VERSION' does not match the standard SemVer format."
             exit 1
           fi
-          echo "Version ${{ inputs.version }} is valid"
+          echo "Version $VERSION is valid"
 
       - name: prepare release
         if: steps.check-perms.outputs.can-publish == 'true'
