ci: give permission to commit, add tags and push changes

--- a/.github/workflows/release-gosu.yml
+++ b/.github/workflows/release-gosu.yml
@@ -12,6 +12,8 @@ jobs:
   prepare-release:
    # needs: build-test
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Needed for creating tags and pushing commits
     outputs:
       can-publish: ${{ steps.check-perms.outputs.can-publish }}
     steps:
