--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       TERM: dumb
       MAVEN_OPTS: "-Xmx1024m"
     docker:
-      - image: circleci/java:11
+      - image: cimg/openjdk:21.0
     steps:
       - checkout
       - restore_cache:
@@ -22,13 +22,13 @@ jobs:
           key: v1-cache-{{ .Environment.CIRCLE_WORKFLOW_ID }}
           paths:
             - ~/project
-  test-java8:
+  test-java21:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
       TERM: dumb
       MAVEN_OPTS: "-Xmx1024m"
     docker:
-      - image: circleci/java:8
+      - image: cimg/openjdk:21.0
     steps:
       - restore_cache:
           key: v1-cache-{{ .Environment.CIRCLE_WORKFLOW_ID }}
@@ -55,36 +55,6 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
           paths:
             - ~/.m2
-  test-java11:
-    environment:
-      TZ: "/usr/share/zoneinfo/America/Los_Angeles"
-      TERM: dumb
-      MAVEN_OPTS: "-Xmx1024m"
-    docker:
-      - image: circleci/openjdk:11-jdk
-    steps:
-      - restore_cache:
-          key: v1-cache-{{ .Environment.CIRCLE_WORKFLOW_ID }}
-      - restore_cache:
-          key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
-      - run:
-          name: Run tests
-          command: mvn test -B
-      - run:
-          name: Save test results
-          command: |
-            mkdir -p ~/junit/
-            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
-            find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} ~/junit/ \;
-          when: always
-      - store_artifacts:
-          path: ~/junit
-      - store_test_results:
-          path: ~/junit
-      - save_cache:
-          key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
-          paths:
-            - ~/.m2
 workflows:
   version: 2
   build_and_test:
@@ -94,9 +64,6 @@ workflows:
             branches:
               ignore:
                 - /rel\/.*/
-      - test-java8:
-          requires:
-             - compile
-      - test-java11:
+      - test-java21:
           requires:
             - compile
